--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,29 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "@shared/*":[
+        "src/app/shared/*"
+      ],
+      "@inicio/*":[
+        "src/app/modules/inicio/*"
+      ],
+      "@sedes/*":[
+        "src/app/modules/sedes/*"
+      ],
+      "@servicios/*":[
+        "src/app/modules/servicios/*"
+      ],
+      "@agenda/*":[
+        "src/app/modules/agenda/*"
+      ],
+      "@persona5/*":[
+        "src/app/modules/persona5/*"
+      ],
+      "@comentarios/*":[
+        "src/app/modules/comentarios/*"
+      ]
+    },
     "target": "es2017",
     "module": "es2020",
     "lib": [
